Table Client {
  id integer [primary key, increment]
  name varchar(100) [not null]
  email varchar(256) [unique]
  hash varchar(256) [not null]
  registrationDate timestamp [not null, default: "now()"]
}

Table Category {
  id integer [primary key, increment]
  name varchar(128) [unique]
  description text [not null]
}

Table Product {
  id integer [primary key, increment]
  name varchar(128) [unique]
  description text [not null]
  price decimal(10,2) [not null]
  quantity integer [not null, default: 0]
  categoryId integer [not null]
}

Table Order {
  id integer [primary key, increment]
  status varchar(128) [not null]
  createDate timestamp [not null, default: "now()"]
  clientId integer [not null]
}

Table OrderContent {
  id integer [primary key, increment]
  orderId integer [not null]
  productId integer [not null]
  productPrice decimal(10,2) [not null]
  productQuantity integer [not null]
}

Ref: Product.categoryId > Category.id
Ref: OrderContent.orderId > Order.id
Ref: OrderContent.productId > Product.id
Ref: Order.clientId > Client.id
